Allow for changing edge weights. Minor refactorings like changing "$scope" to "this" when I can. Magically fix bug of deleting nodes without names shifting over.

--- a/app/stylesheets/styles.sass
+++ b/app/stylesheets/styles.sass
@@ -46,6 +46,9 @@
 
 #edgeInput
   color: black
+  margin-left: 20px
+  margin-bottom: 20px
+  margin-top: 10px
 
 #freeze-nodes
   font-size: 16px
